# fraud-mlops

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  databricks.yml  pyproject.toml  requirements.txt
api/: app.py
flows/: fraud_detection_flow.py
infra/snowflake/: schema.sql
scripts/: deploy_from_s3.sh  log_metaflow_run.py  notify.py  run_databricks_job.py  run_step_functions.sh  sync_metrics_to_snowflake.py
src/fraud_mlops/: __init__.py  config.py  data.py  drift.py  inference.py  io_utils.py  model.py  snowflake_sync.py  train.py  transforms.py
src/fraud_mlops_stack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_drift.py  test_training.py  test_transforms.py
